apps/default/headscale/manifests/tailscale-client.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tailscale
  labels:
    app: tailscale
spec:
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      serviceAccountName: tailscale
      containers:
        - name: tailscale
          image: tailscale/tailscale:v1.78.3
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: data-volume
              mountPath: "/var/lib/tailscale"
            - name: dev-net-tun
              mountPath: "/dev/net/tun"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: tailscale-data
        - name: dev-net-tun
          hostPath:
            path: "/dev/net/tun"
      restartPolicy: Always
