apps/default/headscale/manifests/headscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  annotations:
    configmap.reloader.stakater.com/reload: "headscale-config"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: headscale/headscale:v0.23
          args:
            - "serve"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/headscale
            - name: data-volume
              mountPath: /var/lib/headscale

      volumes:
        - name: config-volume
          configMap:
            name: headscale-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: headscale-data
---
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  selector:
    app: headscale
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8080
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
