apps/default/headscale/manifests/wireguard-peer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard-peer
  labels:
    app: wireguard-peer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard-peer
  template:
    metadata:
      labels:
        app: wireguard-peer
    spec:
      containers:
        - name: wireguard-peer
          image: ghcr.io/digitallyrefined/docker-wireguard-tunnel:v3
          volumeMounts:
            - name: wireguard-config
              mountPath: /etc/wireguard/wg0.conf
              subPath: wg0.conf
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: wireguard-config
          secret:
            secretName: wireguard-peer-conf
            items:
              - key: wg0.conf
                path: wg0.conf
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-peer-service
spec:
  selector:
    app: wireguard-peer
  ports:
    - name: wireguard-port
      port: 51820
      targetPort: 51820
      protocol: UDP
  type: ClusterIP
