apps/default/headscale/manifests/ingress.yaml
# Create a dedicated service for UI, because
# we are exposing "headscale" service through the tunnel
# and don't want to expose the UI through the tunnel
apiVersion: v1
kind: Service
metadata:
  name: headscale-ui
spec:
  selector:
    app.kubernetes.io/name: headscale
  ports:
    - name: ui
      port: 80
      targetPort: 81
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: VPN management
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: tailscale
    gethomepage.dev/name: Headscale
spec:
  rules:
    # These are the paths for internal usage
    # outside access will be done through the tunnel
    # created in the tunnel-binding.yaml
    - host: vpn.$(DNS) # DNS will be replaced by kustomize
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: headscale-ui
                port:
                  name: ui

          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  name: http
